PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.1.2
- Moved reflection into its own extension. (Marcus)
- Added reflection constants as class constants. (Johannes)
- Added --enable-gcov configure option to enable C-level code coverage.
  (John, Jani)
- Added missing support for 'B' format identifier to date() function. (Ilia)
- Improved SPL: (Marcus)
  . Added class SplFileInfo as root class for DirectoryIterator and 
    SplFileObject
- Improved SimpleXML extension: (Marcus)
  . Fixed memleaks
  . Fixed var_dump()
  . Fixed isset/empty/(bool) behavior
  . Fixed iterator edge cases
  . Added methods getNamespaces(), getDocNamespaces()
- Fixed many bugs in OCI8. (Tony)
- Fixed crash and leak in mysqli when using 4.1.x client libraries and
  connecting to 5.x server. (Andrey)
- Fixed bug #35508 (PDO fails when unknown fetch mode specified). (Tony)
- Fixed bug #35499 (strtotime() does not handle whitespace around the date 
  string). (Ilia)
- Fixed bug #35496 (Crash in mcrypt_generic()/mdecrypt_generic() without 
  proper init). (Ilia)
- Fixed bug #35490 (socket_sendto() unable to handle IPv6 addresses). (Tony)
- Fixed bug #35437 (Segfault or Invalid Opcode 137/1/4). (Dmitry)
- Fixed bug #34729 (Crash in ZTS mode under Apache). (Dmitry, Zeev) 
- Fixed bug #35470 (Assigning global using variable name from array doesn't
  function). (Dmitry)
- Fixed bug #35456 (+ 1 [time unit] format did not work). (Ilia)
- Fixed bug #35431 (PDO crashes when using LAZY fetch with fetchAll). (Wez)
- Fixed bug #35430 (PDO crashes on incorrect FETCH_FUNC use). (Tony)
- Fixed bug #35427 (str_word_count() handles '-' incorrectly). (Ilia)
- Fixed bug #35425 (idate() function ignores timezone settings). (Ilia)
- Fixed bug #35422 (strtotime() does not parse times with UTC as timezone).
  (Ilia)