@@ -1,8 +1,8 @@
-dnl $Id: config.m4,v 1.10.2.2 2005/12/02 01:59:44 iliaa Exp $
+dnl $Id: config.m4,v 1.10.2.3 2005/12/02 02:18:54 iliaa Exp $
 dnl config.m4 for extension hash
 
 PHP_ARG_ENABLE(hash, whether to enable hash support,
-[  --enable-hash           Enable hash support])
+[  --disable-hash           Disable hash support], yes)
 
 if test "$PHP_HASH" != "no"; then
   AC_DEFINE(HAVE_HASH_EXT,1,[Have HASH Extension])
